--- a/.github/workflows/otsdaq-spack.yaml
+++ b/.github/workflows/otsdaq-spack.yaml
@@ -46,6 +46,7 @@ jobs:
           art=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas/art-suite-*|tail -1|sed 's|.*/||g'`
           artdaq=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas/artdaq-*|tail -1|sed 's|.*/||g'`
           ots=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_areas/ots-*|tail -1|sed 's|.*/||g'`
+          echo "${art} ${artdaq} ${ots}"
           echo "art=${art}" >> $GITHUB_OUTPUT
           echo "artdaq=${artdaq}" >> $GITHUB_OUTPUT
           echo "ots=${ots}" >> $GITHUB_OUTPUT
