--- a/.github/workflows/otsdaq-spack.yaml
+++ b/.github/workflows/otsdaq-spack.yaml
@@ -52,7 +52,22 @@ jobs:
           echo "ots=${ots}" >> $GITHUB_OUTPUT
 
       - name: Delete huge unnecessary tools folder
-        run: rm -rf /opt/hostedtoolcache
+        if: runner.os == 'Linux'
+        run: |
+            # Space usage before cleanup
+            df -h /
+ 
+            # Remove unused tool caches (comment any required ones with #)
+            sudo rm -rf /usr/lib/jvm
+            sudo rm -rf /usr/local/.ghcup
+            sudo rm -rf /usr/local/lib/android
+            sudo rm -rf /usr/local/share/powershell
+            sudo rm -rf /usr/share/dotnet
+            sudo rm -rf /usr/share/swift
+            sudo rm -rf "$AGENT_TOOLSDIRECTORY"
+ 
+            # Verify gains
+            df -h /
         
       - name: Check out the daq-docker repo
         uses: actions/checkout@main
