--- a/.github/workflows/otsdaq-spack-selfhosted.yaml
+++ b/.github/workflows/otsdaq-spack-selfhosted.yaml
@@ -16,7 +16,6 @@ jobs:
 
   push_to_registries:
     name: Push Docker image to multiple registries
-    runs-on: self-hosted
     permissions:
       packages: write
       contents: read
@@ -27,6 +26,7 @@ jobs:
       matrix:
         os: [ '9', '10' ]
         spackVer: [ 'v0.28', 'v1.1' ]
+    runs-on: [self-hosted, alma-${{ matrix.os }}]
     steps:
       - name: Test CVMFS
         id: cvmfsdirs
