--- a/.github/workflows/otsdaq-spack-selfhosted.yaml
+++ b/.github/workflows/otsdaq-spack-selfhosted.yaml
@@ -22,7 +22,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ 'alma9', 'alma10' ]
+        os: [ 'al9', 'al10' ]
         spackVer: [ 'v0.28', 'v1.1' ]
     runs-on: [self-hosted, "${{ matrix.os }}"]
     steps:
@@ -30,9 +30,9 @@ jobs:
         id: cvmfsdirs
         run: |
           ls -l /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}
-          art=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}/art-suite-*|tail -1|sed 's|.*/||g'`
-          artdaq=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}/artdaq-*|tail -1|sed 's|.*/||g'`
-          ots=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}/ots-*|tail -1|sed 's|.*/||g'`
+          art=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}/art-suite-*-${{matrix.os}}|tail -1|sed 's|.*/||g'`
+          artdaq=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}/artdaq-*-${{matrix.os}}|tail -1|sed 's|.*/||g'`
+          ots=`ls -d /cvmfs/fermilab.opensciencegrid.org/products/artdaq/spack_${{matrix.spackVer}}/ots-*-${{matrix.os}}|tail -1|sed 's|.*/||g'`
           echo "${art} ${artdaq} ${ots}"
           echo "art=${art}" >> $GITHUB_OUTPUT
           echo "artdaq=${artdaq}" >> $GITHUB_OUTPUT
